--- a/app/src/main/res/layout/activity_document.xml
+++ b/app/src/main/res/layout/activity_document.xml
@@ -35,7 +35,7 @@
             android:id="@+id/tv_show"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="文档"
+            android:text="@string/document_zn"
             android:gravity="center"
             android:textColor="@color/base_color_text_white"
             android:textSize="@dimen/text_size_large" />
@@ -107,9 +107,10 @@
                 android:layout_height="1dp" />
 
             <TextView
+                android:id="@+id/tv_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="删除"
+                android:text="@string/delete_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_small" />
 
@@ -139,9 +140,10 @@
                 android:layout_height="1dp" />
 
             <TextView
+                android:id="@+id/tv_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="复制"
+                android:text="@string/copy_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_small" />
 
@@ -171,9 +173,10 @@
                 android:layout_height="1dp" />
 
             <TextView
+                android:id="@+id/tv_cut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="剪切"
+                android:text="@string/cut_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_small" />
 
@@ -203,9 +206,10 @@
                 android:layout_height="1dp" />
 
             <TextView
+                android:id="@+id/tv_upload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上传"
+                android:text="@string/upload_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_small" />
 
@@ -235,9 +239,10 @@
                 android:layout_height="1dp" />
 
             <TextView
+                android:id="@+id/tv_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="全选"
+                android:text="@string/all_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_small" />
 
