--- a/app/src/main/res/layout/activity_application.xml
+++ b/app/src/main/res/layout/activity_application.xml
@@ -26,7 +26,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="-24dp"
             android:gravity="center"
-            android:text="  应用  "
+            android:text="@string/application_zn"
             android:textColor="@color/base_color_text_white"
             android:textSize="@dimen/text_size_large" />
 
