--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue_light">
+            android:background="@color/blue_light"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_right"
