--- a/app/src/main/res/layout/activity_mouse.xml
+++ b/app/src/main/res/layout/activity_mouse.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:gravity="center"
-            android:text="键鼠控制"
+            android:text="@string/keyboard_mouse_zn"
             android:textColor="@color/base_color_text_white"
             android:textSize="@dimen/text_size_large" />
 
