--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -29,7 +29,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="-24dp"
             android:gravity="center"
-            android:text="聊天共享"
+            android:text="@string/chatroom_zn"
             android:textColor="@color/base_color_text_white"
             android:textSize="@dimen/text_size_large" />
 
@@ -94,7 +94,7 @@
                 android:background="@drawable/btn_selector"
                 android:elevation="3dp"
                 android:gravity="center"
-                android:text="发送"
+                android:text="@string/send_zn"
                 android:textColor="@color/base_color_text_white"
                 android:textSize="@dimen/text_size_large" />
 
